--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,45 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*.svg",
+                "input": "node_modules/ionicons/dist/ionicons/svg",
+                "output": "./svg"
+              }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              {
+                "input": "node_modules/@ionic/angular/css/normalize.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/structure.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/typography.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/core.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/padding.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/float-elements.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/text-alignment.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/text-transformation.css"
+              },
+              {
+                "input": "node_modules/@ionic/angular/css/flex-utils.css"
+              },
+              {
+                "input": "src/theme/variables.css"
+              }
             ],
             "scripts": []
           },
@@ -121,8 +156,33 @@
               "devServerTarget": "IonicAutocomplete:serve:production"
             }
           }
+        },
+        "ionic-cordova-serve": {
+          "builder": "@ionic/angular-toolkit:cordova-serve",
+          "options": {
+            "cordovaBuildTarget": "IonicAutocomplete:ionic-cordova-build",
+            "devServerTarget": "IonicAutocomplete:serve"
+          },
+          "configurations": {
+            "production": {
+              "cordovaBuildTarget": "IonicAutocomplete:ionic-cordova-build:production",
+              "devServerTarget": "IonicAutocomplete:serve:production"
+            }
+          }
+        },
+        "ionic-cordova-build": {
+          "builder": "@ionic/angular-toolkit:cordova-build",
+          "options": {
+            "browserTarget": "IonicAutocomplete:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "IonicAutocomplete:build:production"
+            }
+          }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "IonicAutocomplete"
 }
